# Daqromancy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  dypch.h
src/Core/: Application.cpp  Application.h  DYCore.h  DYProject.cpp  DYProject.h  DataDistributor.cpp  DataDistributor.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  ProjectSerializer.cpp  ProjectSerializer.h  ScalarDistributor.cpp  ScalarDistributor.h  ThreadSafeQueue.h  Window.h  main.cpp
src/DAQ/: AcquisitionLayer.cpp  AcquisitionLayer.h  Digitizer.cpp  Digitizer.h  DigitizerChain.cpp  DigitizerChain.h  DigitizerDefs.cpp  DigitizerDefs.h
src/DYio/: DYFile.cpp  DYFile.h  DYListData.h  DYMessage.h  DYRun.cpp  DYRun.h  TCPServer.cpp  TCPServer.h
src/Editor/: DigitizerPanel.cpp  DigitizerPanel.h  EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  ScalarPanel.cpp  ScalarPanel.h  ScopePanel.cpp  ScopePanel.h  SyncDialog.cpp  SyncDialog.h
src/Events/: AcqEvent.h  AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
src/Renderer/: GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h
